--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,7 @@
 
   <div class="row">
     <div class="col-sm-4" *ngFor="let oferta of ofertas">
-      <div class="card">
+      <div class="card mb-5">
         <img class="card-img-top" [src]="oferta.imagens[0].url">
         <div class="card-body">
           <h4 class="card-title">{{ oferta.titulo }}</h4>
